# bookswap-demo

./: .gitignore  package-lock.json  package.json  requests.md  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: security.yml
backend/: bookswap.db  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  security.py
backend/templates/: index.html
src/: App.js  globals.css  output.css
src/components/: BookDetail.js  BookList.js  CreateBook.js  ErrorBoundary.js  LandingPage.js  Login.js  MetricsDashboard.js  NavBar.js  Register.js
src/components/ui/: Button.js  Card.js  Input.js
src/config/: featureFlags.js
src/context/: AuthContext.js
src/services/: apiService.js  loggingService.js  mockAuth.js
