[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.122.0",
    "jinja2>=3.1.6",
    "prometheus-client>=0.23.1",
    "psutil>=7.1.3",
    "python-json-logger>=4.0.0",
    "uvicorn>=0.38.0",
]
